# n-way-attention

./: .gitignore  README.md  attention.py  cfgs.py  compare.py  induction_head.ipynb  instructions.txt  interp_models.py  local_trittention.py  main.py  mixed_attention.py  pyproject.toml  quattention.py  requirements.txt  results.txt  task_generators.py  train_on_text.py  trainer.py  transformer_models.py  trittention.py  trittention_cube.py  utils_misc.py
examples/: induction_head.ipynb  main.py  teacher_student_model.py  train_on_img.py  train_on_text.py
nway_attention/: attention.py  cfgs.py  compare.py  interp_models.py  local_trittention.py  mixed_attention.py  quattention.py  task_generators.py  train_on_text.py  transformer_models.py  trittention.py  trittention_cube.py  utils_misc.py  vit.py
nway_attention/attention/: attention.py  differential_trittention.py  mixed_attention.py  mixed_local_attention.py  trittention.py  trittention_cube.py  trittention_dotsum_gatedv.py
nway_attention/modules/: attention.py  interp_models.py  mixed_attention.py  other_modules.py  simple_vit.py  transformer_models.py  trittention.py  trittention_cube.py  vit.py  vit_jax.py
nway_attention/train/: __init__.py  _train_student_with_teacher.py  trainer.py
