[tool.poetry]
name = "nway_attention"
version = "0.1.0"
description = "Implementation of n-way attention layers in Python with different frameworks"
authors = [
    "Alejandro Alvarez <alejandrogus792@gmail.com>",
    "Sergio Alvarez <sergioalvarezbalanya1995@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2"
einops = "^0.8.0"
jaxtyping = "^0.2.29"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"


[tool.poetry.group.optional.dependencies]
jupyter = "^1.0.0"
transformers = "^4.41.2"
wandb = "^0.17.0"
nnsight = "^0.2.19"
plotly = "^5.22.0"
pandas = "^2.2.2"
jax = "^0.4.28"
flax = "^0.8.4"
transformer-lens = "^2.0.0"
pyarrow = "^16.1.0"
huggingface-hub = "^0.23.3"
datasets = "^2.19.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
